fixed issue with debug print statements for OpenACC implementation. Added reduction support scheme to standard configuration

--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -481,10 +481,10 @@ ${CG_DIR}rawCG.xml: ${SRC_H90TGT_HFPP}
 	mkdir -p ${CG_DIR} && python ${PYTHON_ARGS_GENERAL} ${PYTHON_ARGS_RAW_CG} ${HF_PYTHON_DIR}annotatedCallGraphFromH90SourceDir.py -i ${SRC_DIR_HFPP} ${H90_PREPROCESSOR_ARGS} > $@
 
 ${DIR_CPU}implementationNamesByTemplate: ${CG_DIR}rawCG.xml
-	@mkdir -p ${DIR_CPU} && ${HF_DIR}/hf_bin/getImplementationNameByTemplate.sh cpu ${IMPLEMENTATION_MODE_SPECIFIER} ${CONFIGDIR}MakesettingsGeneral ${CG_DIR}rawCG.xml > ${DIR_CPU}implementationNamesByTemplate
+	mkdir -p ${DIR_CPU} && ${HF_DIR}/hf_bin/getImplementationNameByTemplate.sh cpu ${IMPLEMENTATION_MODE_SPECIFIER} ${CONFIGDIR}MakesettingsGeneral ${CG_DIR}rawCG.xml > ${DIR_CPU}implementationNamesByTemplate
 
 ${DIR_GPU}implementationNamesByTemplate: ${CG_DIR}rawCG.xml
-	@mkdir -p ${DIR_GPU} && ${HF_DIR}/hf_bin/getImplementationNameByTemplate.sh gpu ${IMPLEMENTATION_MODE_SPECIFIER} ${CONFIGDIR}MakesettingsGeneral ${CG_DIR}rawCG.xml > ${DIR_GPU}implementationNamesByTemplate
+	mkdir -p ${DIR_GPU} && ${HF_DIR}/hf_bin/getImplementationNameByTemplate.sh gpu ${IMPLEMENTATION_MODE_SPECIFIER} ${CONFIGDIR}MakesettingsGeneral ${CG_DIR}rawCG.xml > ${DIR_GPU}implementationNamesByTemplate
 
 ${CG_DIR}CG_CPU.xml: ${CG_DIR}rawCG.xml
 	@echo "...........building CPU callgraph"
