--- a/examples/module_data/config/Makefile
+++ b/examples/module_data/config/Makefile
@@ -33,7 +33,7 @@ helper_functions_gpu: helper_functions.o
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: kernels.o kernels2.o kernels3.o kernels4.o kernels5.o kernels7.o my_module.o helper_functions.o ${USER_LIB}
+example.o: kernels.o kernels2.o kernels3.o kernels4.o kernels5.o kernels7.o kernels8.o my_module.o helper_functions.o ${USER_LIB}
 kernels.o: my_module.o helper_functions.o
 kernels2.o: my_module.o helper_functions.o
 kernels3.o: my_module.o helper_functions.o
@@ -41,3 +41,4 @@ kernels4.o: my_module.o helper_functions.o
 kernels5.o: my_module.o helper_functions.o
 # kernels6.o: my_module.o helper_functions.o
 kernels7.o: my_module.o helper_functions.o
+kernels8.o: my_module.o helper_functions.o
