--- a/examples/module_data/config/Makefile
+++ b/examples/module_data/config/Makefile
@@ -28,12 +28,13 @@ include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
 time_profiling.o: helper_functions.o
-helper_functions_gpu: helper_functions.o
+helper_functions_gpu.o: helper_functions.o
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
 example.o: kernels.o kernels2.o kernels3.o kernels4.o kernels5.o kernels7.o kernels8.o my_module.o helper_functions.o ${USER_LIB}
+my_module.o: more_indirection_module.o helper_functions.o
 kernels.o: my_module.o helper_functions.o
 kernels2.o: my_module.o helper_functions.o
 kernels3.o: my_module.o helper_functions.o
