--- a/examples/module_data/config/Makefile
+++ b/examples/module_data/config/Makefile
@@ -33,8 +33,9 @@ helper_functions_gpu.o: helper_functions.o
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: kernels.o kernels2.o kernels3.o kernels4.o kernels5.o kernels7.o kernels8.o my_module.o helper_functions.o ${USER_LIB}
+example.o: kernels.o kernels2.o kernels3.o kernels4.o kernels5.o kernels7.o kernels8.o my_module.o host_only_module.o helper_functions.o ${USER_LIB}
 my_module.o: more_indirection_module.o helper_functions.o
+host_only_module.o: kernels8.o
 kernels.o: my_module.o helper_functions.o
 kernels2.o: my_module.o helper_functions.o
 kernels3.o: my_module.o helper_functions.o
