new integration test for mixed host/device code in kernel routines. changes in HF to work for the case where host code in kernel containing routines touches host arrays

--- a/examples/hybrid_device_and_host_routines/config/Makefile
+++ b/examples/hybrid_device_and_host_routines/config/Makefile
@@ -33,5 +33,5 @@ helper_functions_gpu.o: helper_functions.o
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-example.o: ${USER_LIB} helper_functions_gpu.o
+example.o: host_only_module.o helper_functions_gpu.o ${USER_LIB}
 
