--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -1,4 +1,4 @@
-# Copyright (C) 2016 Michel Müller, Tokyo Institute of Technology
+# Copyright (C) 2018 Michel Müller, Tokyo Institute of Technology
 
 # This file is part of Hybrid Fortran.
 
@@ -124,9 +124,10 @@ SRC_LIB_FORT=$(shell find ${LIBDIR} -type f -name '*.f90')
 SRC_LIB_FORT_PP=$(shell find ${LIBDIR} -type f -name '*.F90')
 SRC_LIB_H90=$(shell find ${LIBDIR} -type f -name '*.h90')
 SRC_LIB_H90_WITH_PP=$(shell find ${LIBDIR} -type f -name '*.H90')
-SRC_FORT=${SRC_F90} ${SRC_F90PP} ${SRC_LIB_FORT} ${SRC_LIB_FORT_PP}
+
+SRC_FORT=${SRC_F90} ${SRC_LIB_FORT} ${SRC_LIB_FORT_PP}
 SRC_TGT_FORT_PRE='$(SRC_FORT:.F90=.P90)'
-SRC_TGT_FORT=$(shell python ${HF_PYTHON_DIR}filterExceptions.py --paths ${SRC_TGT_FORT_PRE} --exceptions 'storage_order') storage_order.F90
+SRC_TGT_FORT=$(shell python ${HF_PYTHON_DIR}filterExceptions.py --paths ${SRC_TGT_FORT_PRE} ${SRC_F90PP} --exceptions 'storage_order time_profiling') storage_order.F90 time_profiling.F90
 
 SRC_FORT_CPU=$(addprefix $(SRC_DIR_CPU),$(notdir ${SRC_TGT_FORT}))
 SRC_FORT_GPU=$(addprefix $(SRC_DIR_GPU),$(notdir ${SRC_TGT_FORT}))
