working on tracer support

--- a/hf_template/MakefileForCompilationTemplate
+++ b/hf_template/MakefileForCompilationTemplate
@@ -29,6 +29,7 @@ include ${TOOLSDIR}MakefileForCompilationCommon
 
 helper_functions.o: time_profiling.o
 helper_functions_gpu.o: helper_functions.o
+helper_functions_cuda_fortran.o: helper_functions.o
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
